--- a/index.html
+++ b/index.html
@@ -63,6 +63,66 @@
     <td class="chessboard" id="h4"></td>
 </tr>
 <tr class="chessboard">
+    <td class="chessboard a3-Square" id="a3-id"></td>
+    <td class="chessboard" id="b3"></td>
+    <td class="chessboard" id="c3"></td>
+    <td class="chessboard" id="d3"></td>
+    <td class="chessboard" id="e3"></td>
+    <td class="chessboard" id="f3"></td>
+    <td class="chessboard" id="g3"></td>
+    <td class="chessboard" id="h3"></td>
+</tr>
+<tr class="chessboard">
+    <td class="chessboard a2-Square" id="a2-id"></td>
+    <td class="chessboard" id="b2"></td>
+    <td class="chessboard" id="c2"></td>
+    <td class="chessboard" id="d2"></td>
+    <td class="chessboard" id="e2"></td>
+    <td class="chessboard" id="f2"></td>
+    <td class="chessboard" id="g2"></td>
+    <td class="chessboard" id="h2"></td>
+</tr>
+<tr class="chessboard">
+    <td class="chessboard a1-Square" id="a1-id"></td>
+    <td class="chessboard" id="b1"></td>
+    <td class="chessboard" id="c1"></td>
+    <td class="chessboard" id="d1"></td>
+    <td class="chessboard" id="e1"></td>
+    <td class="chessboard" id="f1"></td>
+    <td class="chessboard" id="g1"></td>
+    <td class="chessboard" id="h1"></td>
+</tr>
+</table>
+        
+
+
+
+
+
+
+
+    <script src="javascript.js"></script>
+</body>
+</html>
+    <td class="chessboard" id="b5"></td>
+    <td class="chessboard" id="c5"></td>
+    <td class="chessboard" id="d5"></td>
+    <td class="chessboard" id="e5"></td>
+    <td class="chessboard" id="f5"></td>
+    <td class="chessboard" id="g5"></td>
+    <td class="chessboard" id="h5"></td>
+</tr>
+<tr class="chessboard">
+    <td class="chessboard a4-Square" id="a4-id"></td>
+    <td class="chessboard" id="b4"></td>
+    <td class="chessboard" id="c4"></td>
+    <td class="chessboard" id="d4"></td>
+    <td class="chessboard" id="e4"></td>
+    <td class="chessboard" id="f4"></td>
+    <td class="chessboard" id="g4"></td>
+    <td class="chessboard" id="h4"></td>
+</tr>
+<tr class="chessboard">
     <td class="chessboard a3-Square" id="a3"></td>
     <td class="chessboard" id="b3"></td>
     <td class="chessboard" id="c3"></td>
